# ruin

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/2022-07-08-171516_create_accounts/: up.sql
migrations/2022-07-09-164639_create_transactions/: down.sql  up.sql
migrations/2022-07-11-134143_create_categories/: down.sql  up.sql
src/: main.rs  model.rs  ofx.rs  schema.rs  ui.rs
