[package]
name = "ruin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0", features = [ "derive" ] }
diesel = { version = "1.4.4", features = ["sqlite"] }
serde-xml-rs = "0.5.1"
diesel_migrations =  "1.4.0"

[target.aarch64-apple-darwin]
rustflags = [
"-C", "link-arg=-undefined",
"-C", "link-arg=dynamic_lookup",
]
